--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 S3_BUCKET = "YOURS3BUCKET"
 SECRET_KEY = "3kVn7$!l#Z@9p2cF"
+MONGODB_URI = "mongodb+srv://porschteez:d7NzmIIfk7Nkj8fY@cluster0.aoy9mn2.mongodb.net/"
